--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "node": ">=0.8.0"
   },
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp test",
+    "build": "gulp build-js"
   },
+  "overrides": {
+    "graceful-fs": "^4.2.11"
+  },  
   "devDependencies": {
     "angular-jsdoc": "^1.3.3",
     "cheerio": "^0.19.0",
